--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 
     <div id="app">
 
+      <h1>To Do List</h1>
+
+      <ul>
+        <li v-for="(todo, index) in todos">
+          <span :style=" todo.done ? donestyle : notdonestyle ">{{ todo.text }}</span>
+          <span>  X</span>
+        </li>
+      </ul>
       
     </div>
     
