--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
         <li v-for="(todo, index) in todos">
           <span :style=" todo.done ? donestyle : notdonestyle ">{{ todo.text }}</span>
-          <span>  X</span>
+          <span @click="deleteTodo(index)">  X</span>
         </li>
       </ul>
       
