feat: milestone 3 + bonus 1 completati

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
           <span @click="deleteTodo(index)">  X</span>
         </li>
       </ul>
+
+      <input v-model="newTodo.text" @keyup.enter="addTodo()" id="input" type="text">
+      <button @click="addTodo()">Aggiungi</button>
       
     </div>
     
